status http, swagger atualizado e coluna bool user
